# N26-to-YNAB

./: .dockerignore  .gitignore  Dockerfile  configure_crontabs.sh  docker-compose.yaml  pyproject.toml  requirements.txt
src/: api.py
